feat: cron schedule names
